# studify-usp

./: .gitignore  README.md  index.html  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
