[package]
name = "studify-usp"
version = "1.0.0"
description = "Aplicativo completo de gerenciamento de estudos para medicina USP"
authors = ["Gabriel Hiraoka"]
edition = "2021"

[lib]
name = "studify_usp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
